--- a/templates/BitbucketDataCenter.template
+++ b/templates/BitbucketDataCenter.template
@@ -878,6 +878,14 @@ Resources:
                     - !Sub ["ELASTICSEARCH_S3_BUCKET_REGION=${Region}", Region: !Ref "AWS::Region"]
                     - !Sub ["ELASTICSEARCH_SNAPSHOT_IAM_ROLE=${Role}", Role: !Ref BitbucketFileServerRole]
                     - !Sub ["ELASTICSEARCH_HOST=${ESEndpoint}", ESEndpoint: !GetAtt Elasticsearch.DomainEndpoint]
+                    - !If
+                      - StandbyMode
+                      - !Sub ["STANDBY_JDBC_URL=jdbc:postgres://${DBEndpointAddress}/bitbucket", DBEndpointAddress: !GetAtt DB.Endpoint.Address]
+                      - !Ref "AWS::NoValue"
+                    - !If
+                      - StandbyMode
+                      - !Sub ["DR_RDS_READ_REPLICA=${DB}", DB: !Ref DB]
+                      - !Ref "AWS::NoValue"
               mode: 000644
               owner: "ec2-user"
               group: "ec2-user"
