Ensure that collectd-rrdtool is installed by the cloudformation templates

--- a/templates/BitbucketDataCenter.template
+++ b/templates/BitbucketDataCenter.template
@@ -555,6 +555,7 @@ Resources:
                   collectd: []
                   collectd-java: []
                   collectd-generic-jmx: []
+                  collectd-rrdtool: []
               - Ref: "AWS::NoValue"
           files:
             /etc/atl:
@@ -795,6 +796,7 @@ Resources:
                   collectd: []
                   collectd-java: []
                   collectd-generic-jmx: []
+                  collectd-rrdtool: []
               - !Ref "AWS::NoValue"
           files:
             /etc/atl:
