Opted for mount point based DF configuration. Added additional Hazelcast MBean

--- a/ami/config/bitbucket-collectd.conf
+++ b/ami/config/bitbucket-collectd.conf
@@ -85,11 +85,11 @@ LoadPlugin csv
 # Collect partition usage statistics
 LoadPlugin df
 <Plugin df>
-    Device "/dev/xvda"
-    Device "/dev/xvdb"
-    Device "/dev/xvdf"
+    MountPoint "/"
+    MountPoint "/media/ephemeral0"
+    MountPoint "/media/atl"
     IgnoreSelected false
-    ReportByDevice true
+    ReportByDevice false
     ReportInodes false
     ValuesAbsolute true
     ValuesPercentage false
@@ -299,7 +299,34 @@ LoadPlugin java
             <Value>
                 Type "gauge"
                 InstancePrefix "runningOperationsCount"
+
                 Attribute "runningOperationsCount"
+            </Value>
+        </MBean>
+
+        <MBean "com.hazelcast/HazelcastInstance.EventService.hazelcast.hazelcast">
+            ObjectName "com.hazelcast:instance=hazelcast,name=hazelcast,type=HazelcastInstance.EventService"
+            InstancePrefix "com.hazelcast/HazelcastInstance.EventService.hazelcast.hazelcast"
+
+            # fqname = com.hazelcast/HazelcastInstance.EventService.hazelcast.hazelcast#executedRemoteOperationCount
+            <Value>
+                Type "gauge"
+                InstancePrefix "eventThreadCount"
+                Attribute "eventThreadCount"
+            </Value>
+
+            # fqname = com.hazelcast/HazelcastInstance.EventService.hazelcast.hazelcast#eventQueueCapacity
+            <Value>
+                Type "gauge"
+                InstancePrefix "eventQueueCapacity"
+                Attribute "eventQueueCapacity"
+            </Value>
+
+            # fqname = com.hazelcast/HazelcastInstance.EventService.hazelcast.hazelcast#eventQueueSize
+            <Value>
+                Type "gauge"
+                InstancePrefix "eventQueueSize"
+                Attribute "eventQueueSize"
             </Value>
         </MBean>
 
