Fixed configuration for Disk collectd plugin

--- a/ami/config/bitbucket-collectd.conf
+++ b/ami/config/bitbucket-collectd.conf
@@ -98,7 +98,9 @@ LoadPlugin df
 # Collect disk IO statistics
 LoadPlugin disk
 <Plugin disk>
-    Disk "xvd[abf]"
+    Disk "xvda"
+    Disk "xvdb"
+    Disk "xvdf"
     IgnoreSelected false
 </Plugin>
 
