Renamed incorrectly nnamedfqnameOD

--- a/ami/config/bitbucket-collectd.conf
+++ b/ami/config/bitbucket-collectd.conf
@@ -310,7 +310,7 @@ LoadPlugin java
             ObjectName "com.hazelcast:instance=hazelcast,name=hazelcast,type=HazelcastInstance.EventService"
             InstancePrefix "com.hazelcast/HazelcastInstance.EventService.hazelcast.hazelcast"
 
-            # fqname = com.hazelcast/HazelcastInstance.EventService.hazelcast.hazelcast#executedRemoteOperationCount
+            # fqname = com.hazelcast/HazelcastInstance.EventService.hazelcast.hazelcast#eventThreadCount
             <Value>
                 Type "gauge"
                 InstancePrefix "eventThreadCount"
