--- a/templates/JiraDataCenter.template
+++ b/templates/JiraDataCenter.template
@@ -458,20 +458,20 @@
       "Software": {
         "name" : "jira-software",
         "version" : "7.2.3",
-        "shortdisplayname" : "JIRA SW",
-        "fulldisplayname" : "Atlassian JIRA Software"
+        "shortdisplayname" : "\"JIRA SW\"",
+        "fulldisplayname" : "\"Atlassian JIRA Software\""
       },
       "ServiceDesk": {
         "name" : "servicedesk",
         "version" : "3.2.3",
-        "shortdisplayname" : "JIRA SD",
-        "fulldisplayname" : "Atlassian JIRA Service Desk"
+        "shortdisplayname" : "\"JIRA SD\"",
+        "fulldisplayname" : "\"Atlassian JIRA Service Desk\""
       },
       "Core": {
         "name" : "jira-core",
         "version" : "7.2.3",
-        "shortdisplayname" : "JIRA Core",
-        "fulldisplayname" : "Atlassian JIRA Core"
+        "shortdisplayname" : "\"JIRA Core\"",
+        "fulldisplayname" : "\"Atlassian JIRA Core\""
       }
     }
   },
