--- a/templates/BitbucketDataCenter.template
+++ b/templates/BitbucketDataCenter.template
@@ -41,6 +41,7 @@ Metadata:
         Parameters:
           - DBSnapshotId
           - HomeVolumeSnapshotId
+          - ESSnapshotId
           - BitbucketProperties
           - CatalinaOpts
           - AMIOpts
@@ -89,6 +90,8 @@ Metadata:
         default: Elasticsearch instance type
       ESBucketName:
         default: Elasticsearch snapshot S3 bucket name
+      ESSnapshotId:
+        default: Elasticsearch snapshot ID to restore
       FileServerInstanceType:
         default: File server instance type
       HomeDeleteOnTermination:
@@ -253,8 +256,15 @@ Parameters:
   ESBucketName:
     Type: String
     Default: ""
+    Description: "Name of the new, or existing, S3 bucket configured for ElasticSearch snapshots"
     ConstraintDescription: "Must contain only lowercase letters, numbers, periods (.), and dashes (-)."
     AllowedPattern: "[a-z0-9-.]*"
+  ESSnapshotId:
+    Type: String
+    Default: ""
+    Description: "Must be a valid snapshot ID for a snapshot in the configured S3 snapshot repository, must be used in conjunction with ESBucketName set to a correctly configured bucket"
+    AllowedPattern: "[a-z0-9-.]*"
+    ConstraintDescription: "Must contain only lowercase letters, numbers, periods (.), and dashes (-)."
   FileServerInstanceType:
     Description: "Instance type for the file server hosting the Bitbucket shared home directory. See https://confluence.atlassian.com/x/GpdKLg for guidance"
     Type: String
@@ -337,8 +347,10 @@ Conditions:
     !Not [!Equals [!Ref HomeVolumeSnapshotId, ""]]
   DoRestoreFromRDSSnapshot:
     !Not [!Equals [!Ref DBSnapshotId, ""]]
-  ESBucketNameSet:
-    !Not [!Equals [!Ref ESBucketName, ""]]
+  CreateESBucket:
+    !And
+      - !Equals [!Ref ESSnapshotId, ""]
+      - !Not [!Equals [!Ref ESBucketName, ""]]
   StandbyMode:
     !Not [!Equals [!Ref DBMaster, ""]]
   DoSSL:
@@ -351,6 +363,10 @@ Conditions:
     !Or [Condition: DoRestoreFromRDSSnapshot, Condition: StandbyMode]
   DoSetDBMasterUserPassword:
     !And [!Not [!Equals [!Ref DBMasterUserPassword, ""]], Condition: NotStandbyMode]
+  RestoreElasticsearch:
+    !And
+      - !Not [!Equals [!Ref ESSnapshotId, ""]]
+      - !Not [!Equals [!Ref ESBucketName, ""]]
 Mappings:
   AWSInstanceType2Arch:
     c3.large:
@@ -484,7 +500,7 @@ Resources:
                   - "rds:AddTagsToResource"
                   - "rds:CopyDBSnapshot"
                   - "rds:CreateDBSnapshot"
-                  - "rds:DeleteDbSnapshot"
+                  - "rds:DeleteDBSnapshot"
                   - "rds:DescribeDBInstances"
                   - "rds:DescribeDBSnapshots"
                   - "rds:PromoteReadReplica"
@@ -494,20 +510,22 @@ Resources:
                   - "es:*"
                 Resource: ["*"]
               - !If
-                - ESBucketNameSet
+                - CreateESBucket
                 - Effect: Allow
                   Action:
                     - "s3:GetObject"
                     - "s3:PutObject"
                     - "s3:DeleteObject"
                     - "iam:PassRole"
-                  Resource: [ !Sub ["arn:aws:s3:::${BucketName}/*", BucketName: !Ref ElasticsearchBucket] ]
+                  Resource:
+                    - !Sub ["arn:aws:s3:::${BucketName}/*", BucketName: !Ref ESBucketName]
                 - !Ref "AWS::NoValue"
               - !If
-                - ESBucketNameSet
+                - CreateESBucket
                 - Effect: Allow
                   Action: ["s3:ListBucket"]
-                  Resource: [ !Sub ["arn:aws:s3:::${BucketName}", BucketName: !Ref ElasticsearchBucket] ]
+                  Resource:
+                    - !Sub ["arn:aws:s3:::${BucketName}", BucketName: !Ref ESBucketName]
                 - !Ref "AWS::NoValue"
   BitbucketClusterNodeRole:
     Type: "AWS::IAM::Role"
@@ -773,7 +791,7 @@ Resources:
           Value: !Ref "AWS::StackId"
   ElasticsearchBucket:
     Type: "AWS::S3::Bucket"
-    Condition: ESBucketNameSet
+    Condition: CreateESBucket
     Properties:
       BucketName: !Ref ESBucketName
       Tags:
@@ -781,21 +799,21 @@ Resources:
           Value: !Ref "AWS::StackName"
   ElasticsearchBucketPolicy:
     Type: "AWS::S3::BucketPolicy"
-    Condition: ESBucketNameSet
+    Condition: CreateESBucket
     Properties:
-      Bucket: !Ref ElasticsearchBucket
+      Bucket: !Ref ESBucketName
       PolicyDocument:
         Statement:
           - Effect: "Allow"
             Principal:
               AWS: !GetAtt BitbucketFileServerRole.Arn
             Action: ["s3:*"]
-            Resource: !Sub ["arn:aws:s3:::${BucketName}/*", BucketName: !Ref ElasticsearchBucket]
+            Resource: !Sub ["arn:aws:s3:::${BucketName}/*", BucketName: !Ref ESBucketName]
           - Effect: "Allow"
             Principal:
               AWS: !GetAtt BitbucketFileServerRole.Arn
             Action: ["s3:*"]
-            Resource: !Sub ["arn:aws:s3:::${BucketName}", BucketName: !Ref ElasticsearchBucket]
+            Resource: !Sub ["arn:aws:s3:::${BucketName}", BucketName: !Ref ESBucketName]
   FileServer:
     Type: "AWS::EC2::Instance"
     Metadata:
@@ -863,9 +881,10 @@ Resources:
                     - BITBUCKET_HOME=/media/atl/bitbucket
                     - BITBUCKET_UID=atlbitbucket
                     - BITBUCKET_GID=atlbitbucket
-                    - "BACKUP_HOME_TYPE=amazon-ebs"
-                    - "BACKUP_DATABASE_TYPE=amazon-rds"
+                    - "BACKUP_HOME_TYPE=${BACKUP_HOME_TYPE:-amazon-ebs}"
+                    - "BACKUP_DATABASE_TYPE=${BACKUP_DATABASE_TYPE:-amazon-rds}"
                     - BACKUP_ARCHIVE_TYPE=
+                    - "BACKUP_ELASTICSEARCH_TYPE=amazon-es"
                     - "BACKUP_ZERO_DOWNTIME=true"
                     - HOME_DIRECTORY_MOUNT_POINT=/media/atl
                     - HOME_DIRECTORY_DEVICE_NAME=/dev/sdf
@@ -888,12 +907,11 @@ Resources:
                     - AWS_ADDITIONAL_TAGS=
                     - "BITBUCKET_VERBOSE_BACKUP=${BITBUCKET_VERBOSE_BACKUP:-true}"
                     - KEEP_BACKUPS=5
-                    - "BACKUP_ELASTICSEARCH_TYPE=amazon-es"
                     - "ELASTICSEARCH_REPOSITORY_NAME=bitbucket-snapshots"
                     - "ELASTICSEARCH_INDEX_NAME=bitbucket-search-v1"
                     - !Sub ["ELASTICSEARCH_S3_BUCKET=${BucketName}", BucketName: !Ref ESBucketName]
                     - !Sub ["ELASTICSEARCH_S3_BUCKET_REGION=${Region}", Region: !Ref "AWS::Region"]
-                    - !Sub ["ELASTICSEARCH_SNAPSHOT_IAM_ROLE=${Role}", Role: !Ref BitbucketFileServerRole]
+                    - !Sub ["ELASTICSEARCH_SNAPSHOT_IAM_ROLE=${Role}", Role: !GetAtt BitbucketFileServerRole.Arn]
                     - !Sub ["ELASTICSEARCH_HOST=${ESEndpoint}", ESEndpoint: !GetAtt Elasticsearch.DomainEndpoint]
                     - !If
                       - StandbyMode
@@ -906,6 +924,18 @@ Resources:
               mode: 000644
               owner: "ec2-user"
               group: "ec2-user"
+          commands:
+            !If
+              - RestoreElasticsearch
+              - 010_restore_es_snapshot:
+                  command: !Sub
+                    - "/opt/atlassian/bitbucket-diy-backup/bitbucket.diy-restore.sh ${ESSnapshotId}"
+                    - ESSnapshotId: !Ref "ESSnapshotId"
+                  ignoreErrors: true
+                  env:
+                    BACKUP_HOME_TYPE: none
+                    BACKUP_DATABASE_TYPE: none
+              - !Ref "AWS::NoValue"
           services:
             sysvinit:
               cfn-hup:
